--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        Pozniej sie zrobi
         
         <script src="" async defer></script>
     </body>
